<resources>
    <string name="app_name" translatable="false">Счастье есть</string>
    <string name="unit_prompt">Выберите единицу измерения</string>
    <string name="searchText">Поиск по названию, ингредиентам или тегам</string>
    <string name="add_recipe">Добавить рецепт</string>
    <string name="recipe_name">Название рецепта</string>
    <string name="recipe_description">Описание</string>
    <string name="recipe_instructions">Инструкции</string>
    <string name="tag_enter">Введите тег</string>
    <string name="add_tag_button">Добавить</string>
    <string name="add_ingredient_button">+ Добавить ингредиент</string>
    <string name="save">Сохранить</string>
    <string name="recipe_photo">Фото рецепта</string>
    <string name="select_image">Выбрать изображение</string>
    <string name="remove_image">Удалить фото</string>
    <string name="image_load_error">Не удалось загрузить изображение</string>
    <string name="recipe_image_desc">Изображение рецепта</string>
    <string name="servings_hint">Количество порций</string>
    <string name="cooking_time_hint">Время приготовления (мин)</string>
    <string name="servings_label">Порции</string>
    <string name="servings_text">Порций: %1$d</string>
    <string name="cooking_time_text">Время приготовления: %1$d мин</string>
    <string name="calories_text">Калории: %1$d ккал</string>
    <string name="ingredients_label">Ингредиенты</string>
    <string name="instructions_label">Инструкции</string>
    <string name="tags_label">Теги</string>
    <string name="edit_recipe_title">Редактирование рецепта</string>
    <string name="add_recipe_title">Создание рецепта</string>
    <string name="KBZHU">КБЖУ на порцию</string>
    <string name="Cooking_Method_label">Способ приготовления</string>
    <string name="tvDishType_label">Разделы</string>
    <string name="cbDishCold">Холодные закуски</string>
    <string name="cbDishFirst">Первые блюда</string>
    <string name="cbDishHot">Горячие блюда</string>
    <string name="cbDishPreserves">Домашние заготовки</string>
    <string name="cbDishDessert">Десерты</string>
    <string name="cbDishDrinks">Напитки</string>
    <string name="cbDishSide">Гарниры</string>
    <string name="cbDishSauces">Соусы</string>
    <string name="cbDishBakery">Выпечка</string>
    <string name="cbMethodPot">Кастрюля</string>
    <string name="cbMethodPan">Cковорода</string>
    <string name="cbMethodmulticooker">Мультиварка</string>
    <string name="cbMethodOven">Духовка</string>
    <string name="cbMethodGrill">Аэрогриль</string>
    <string name="cbMethodblender">Блендер</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="delete_recipe_title">Удаление рецепта</string>
    <string name="delete_recipe_message">Удалить рецепт \"%1$s\"?</string>
    <string name="ingredient_hint">Ингредиент</string>
    <string name="count_hint">Кол-во</string>
    <string name="delete_ingredient_button">Удалить ингредиент</string>
    <string name="settings">Настройки</string>
    <string name="close">Закрыть</string>
    <string name="views_text">Просмотры: %1$d</string>
    <string name="bottom_all_recipes">Все рецепты</string>
    <string name="bottom_favorites">Все избранные</string>
    <string name="favorite">Избранное</string>
    <string name="sections_all">Все разделы</string>
    <string name="filters_title">Фильтры</string>
    <string name="filter_all_methods">Все способы</string>
    <string name="apply">Применить</string>
    <string-array name="units_array">
        <item>г</item>
        <item>кг</item>
        <item>мл</item>
        <item>л</item>
        <item>ч.л.</item>
        <item>ст.л.</item>
        <item>щепотка</item>
        <item>шт</item>
    </string-array>
    <string-array name="languages_array">
        <item>Русский</item>
        <item>English</item>
    </string-array>
    <string name="select_language_prompt">Выберите язык</string>
    <string name="terms_of_use">Правила пользования</string>
    <string name="back">Назад</string>
    <string name="error_required_field">Обязательное поле</string>
    <string name="error_servings_positive">Введите количество порций больше 0</string>
    <string name="error_quantity_positive">Введите количество больше 0</string>
    <string name="error_add_ingredient">Добавьте хотя бы один ингредиент</string>
    <string name="recipe_required_field_single">Заполните обязательное поле</string>
    <string name="recipe_required_fields_many">Заполните обязательные поля</string>
</resources>