<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/searchText"
            android:layout_weight="1"
            android:iconifiedByDefault="false"
            android:layout_marginVertical="8dp"
            android:backgroundTint="@color/secondaryAccent"/>

        <ImageButton
            android:id="@+id/ivSettings"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_settings"
            android:contentDescription="@string/settings"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="end"
            app:tint="@color/secondaryAccent" />

    </LinearLayout>


    <Button
        android:id="@+id/btnAddRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_recipe"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primaryAccent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRecipes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnAddRecipe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:background="@color/background"/>
</androidx.constraintlayout.widget.ConstraintLayout>